Fixed Mobile OverFlow

--- a/style.css
+++ b/style.css
@@ -440,11 +440,10 @@ section {
   background-color: #0000ff4d;
   border-radius: 15px 15px 0 0;
 }
-.journey .journeyWraper .para {
+/* .journey .journeyWraper .para {
   max-height: 70vh;
   max-width: 100vw;
-  text-overflow: ellipsis;
-}
+} */
 .journey .journeyWraper .para .journeyPara {
   backdrop-filter: blur(69px);
   text-shadow: 0 0 2px blue;
@@ -473,6 +472,7 @@ section {
   text-align: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0), var(--theme-color));
   -webkit-background-clip: text;
+  background-clip: text;
   color: #eb9e9e00;
   font-style: italic;
 }
